# tesis-doctoral-final-v2

./: .gitignore  copy_plots.py  efficiency_base64.txt  evaluate_marl.py  extract_pdf.py  plot_results.py  resilience_base64.txt  routes.rou.xml  run_all_eval.ps1  run_replace.ps1  run_resco.py  template_report.md  tesis_extracted.txt
baselines/RESCO/: .gitignore  README.rst  pyproject.toml
baselines/RESCO/docs/: Environment Configuration.md
baselines/RESCO/docs/source/: conf.py  examples.rst  index.rst  installation.rst  resco_benchmark.agents.rst  resco_benchmark.config.rst  resco_benchmark.mdp_options.rst  resco_benchmark.rst
baselines/RESCO/resco_benchmark/: __init__.py  main.py  multi_signal.py  traffic_signal.py
baselines/RESCO/resco_benchmark/agents/: agent.py
baselines/RESCO/resco_benchmark/agents/action_value/: advanced_xlight.py  mplight.py  multiheaded_dqn.py  pfrl_dqn.py  rlcd.py
baselines/RESCO/resco_benchmark/agents/policy/: coom_sac.py  fma2c.py  ma2c.py  pfrl_ppo.py
baselines/RESCO/resco_benchmark/agents/policy/CoSLight/: act.py  (+11 more)
baselines/RESCO/resco_benchmark/agents/static/: fixed.py  maxpressure.py  maxwave.py  stochastic.py
baselines/RESCO/resco_benchmark/config/: agent.yaml  config.py  config.yaml  optuna_objectives.py  pretty_names.yaml  signal.yaml
baselines/RESCO/resco_benchmark/environments/arterial4x4/: arterial4x4.net.xml
baselines/RESCO/resco_benchmark/environments/cologne1/: cologne1.net.xml  cologne1.rou.xml  cologne1.sumocfg
baselines/RESCO/resco_benchmark/environments/cologne3/: LICENSE  cologne3.net.xml  cologne3.rou.xml
baselines/RESCO/resco_benchmark/environments/cologne8/: cologne8.sumocfg
baselines/RESCO/resco_benchmark/experiment_runner/: common.py  optuna.py  parallel_parse.py
baselines/RESCO/resco_benchmark/mdp_options/: actions.py  rewards.py  state_builder.py  states.py
baselines/RESCO/resco_benchmark/utils/: add_flow.py  csv_to_flo.py  graph.py  graph_by_arriving.py  graph_fresh_ea_hr.py  hourly_demand_graph.py  logs.py  utils.py
(+1828 files in other folders)
